--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="Storage.cpp" />
+    <ClCompile Include="Message.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
@@ -196,6 +197,7 @@
     <ClInclude Include="Member.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
+    <ClInclude Include="Message.h" />
     <ClInclude Include="ThePierGUI.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
