--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="iMessage.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="Message.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -26,6 +27,7 @@
     </ClInclude>
     <ClInclude Include="Main.h" />
     <ClInclude Include="cApp.h" />
+    <ClInclude Include="Message.h" />
     <ClInclude Include="Channel.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="Member.h" />
