--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -180,13 +180,24 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp" />
+    <ClCompile Include="Channel.cpp" />
+    <ClCompile Include="iMessage.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Member.cpp" />
+    <ClCompile Include="Storage.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cApp.h" />
+    <ClInclude Include="Channel.h" />
+    <ClInclude Include="iMessage.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="Member.h" />
+    <ClInclude Include="STDimport.h" />
+    <ClInclude Include="Storage.h" />
     <ClInclude Include="ThePierGUI.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
