--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -14,6 +14,11 @@
     </ClCompile>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="cApp.cpp" />
+    <ClCompile Include="Channel.cpp" />
+    <ClCompile Include="Storage.cpp" />
+    <ClCompile Include="Member.cpp" />
+    <ClCompile Include="iMessage.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -21,5 +26,11 @@
     </ClInclude>
     <ClInclude Include="Main.h" />
     <ClInclude Include="cApp.h" />
+    <ClInclude Include="Channel.h" />
+    <ClInclude Include="Storage.h" />
+    <ClInclude Include="Member.h" />
+    <ClInclude Include="iMessage.h" />
+    <ClInclude Include="STDimport.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
 </Project>
