Sync First Rendition

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
+    <ClCompile Include="sync.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="iMessage.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
+    <ClInclude Include="sync.h" />
     <ClInclude Include="MessageLogger.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
