Sync First Rendition

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -186,8 +186,7 @@
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
-    <ClCompile Include="PierEndpoint.cpp" />
-    <ClCompile Include="PierProto.cpp" />
+    <ClCompile Include="sync.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -199,9 +198,8 @@
     <ClInclude Include="iMessage.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
+    <ClInclude Include="sync.h" />
     <ClInclude Include="MessageLogger.h" />
-    <ClInclude Include="PierEndpoint.h" />
-    <ClInclude Include="PierProto.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="Message.h" />
