--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -22,7 +22,7 @@
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
     <ClCompile Include="MainTest.cpp" />
-    <ClCompile Include="PierProto.cpp" />
+    <ClCompile Include="sync.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -38,6 +38,6 @@
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="MessageLogger.h" />
-    <ClInclude Include="PierProto.h" />
+    <ClInclude Include="sync.h" />
   </ItemGroup>
 </Project>
