--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="iMessage.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Member.cpp" />
+    <ClCompile Include="MessageLogger.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="iMessage.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
+    <ClInclude Include="MessageLogger.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="Message.h" />
