Added test button

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="Channel.cpp" />
     <ClCompile Include="iMessage.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
     <ClCompile Include="Storage.cpp" />
