--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
+    <ClCompile Include="PierProto.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
     <ClInclude Include="MessageLogger.h" />
+    <ClInclude Include="PierProto.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="Message.h" />
