Added login functionality.
Added the following:
- Login functionality to a specific user, read from a file
- Creating new users and saving them to a file
- GUI elements to support the above

--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="MessageLogger.cpp" />
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="sync.cpp" />
+    <ClCompile Include="LoginController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -37,6 +38,7 @@
     <ClInclude Include="iMessage.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="LoginController.h" />
     <ClInclude Include="MessageLogger.h" />
     <ClInclude Include="sync.h" />
   </ItemGroup>
