--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="cApp.cpp" />
     <ClCompile Include="Channel.cpp" />
     <ClCompile Include="iMessage.cpp" />
+    <ClCompile Include="LoginController.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
@@ -196,6 +197,7 @@
     <ClInclude Include="cApp.h" />
     <ClInclude Include="Channel.h" />
     <ClInclude Include="iMessage.h" />
+    <ClInclude Include="LoginController.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
     <ClInclude Include="sync.h" />
