--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -206,6 +206,9 @@
     <ClInclude Include="ThePierGUI.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="boat.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
