PierEndpoint with methods for Sends. PierErr_t enum for error returns. More classes for pierrequests.

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MessageLogger.cpp" />
+    <ClCompile Include="PierEndpoint.cpp" />
     <ClCompile Include="PierProto.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Message.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="Member.h" />
     <ClInclude Include="MessageLogger.h" />
+    <ClInclude Include="PierEndpoint.h" />
     <ClInclude Include="PierProto.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
