--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="MainLogin.cpp" />
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
+    <ClCompile Include="PierListener.cpp" />
     <ClCompile Include="sync.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="MainLoginInterface.h" />
     <ClInclude Include="Member.h" />
+    <ClInclude Include="PierListener.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="ThePierGUI.h" />
