--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="MainLogin.cpp" />
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="Member.cpp" />
+    <ClCompile Include="PierClient.cpp" />
     <ClCompile Include="PierListener.cpp" />
     <ClCompile Include="sync.cpp" />
     <ClCompile Include="Storage.cpp" />
@@ -202,6 +203,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="MainLoginInterface.h" />
     <ClInclude Include="Member.h" />
+    <ClInclude Include="PierClient.h" />
     <ClInclude Include="PierListener.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
