--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -19,11 +19,10 @@
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="iMessage.cpp" />
     <ClCompile Include="User.cpp" />
-    <ClCompile Include="Message.cpp" />
-    <ClCompile Include="MessageLogger.cpp" />
     <ClCompile Include="MainTest.cpp" />
     <ClCompile Include="sync.cpp" />
     <ClCompile Include="LoginController.cpp" />
+    <ClCompile Include="MainLogin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -31,7 +30,6 @@
     </ClInclude>
     <ClInclude Include="Main.h" />
     <ClInclude Include="cApp.h" />
-    <ClInclude Include="Message.h" />
     <ClInclude Include="Channel.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="Member.h" />
@@ -39,7 +37,9 @@
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="LoginController.h" />
-    <ClInclude Include="MessageLogger.h" />
-    <ClInclude Include="sync.h" />
+    <ClInclude Include="MainLoginInterface.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="boat.ico" />
   </ItemGroup>
 </Project>
