add PierProtocol namespace for higher level protocol functions. Considering moving write_several_peers to there.

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="PierClient.cpp" />
     <ClCompile Include="PierListener.cpp" />
+    <ClCompile Include="Protocol.cpp" />
     <ClCompile Include="sync.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="Member.h" />
     <ClInclude Include="PierClient.h" />
     <ClInclude Include="PierListener.h" />
+    <ClInclude Include="Protocol.h" />
     <ClInclude Include="STDimport.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="ThePierGUI.h" />
