--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="Signing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cApp.h" />
@@ -203,6 +204,7 @@
     <ClInclude Include="Storage.h" />
     <ClInclude Include="ThePierGUI.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="Signing.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="boat.ico" />
