--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="ThePierGUI.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="Uuid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cApp.h" />
@@ -204,6 +205,7 @@
     <ClInclude Include="Storage.h" />
     <ClInclude Include="ThePierGUI.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="Uuid.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="boat.ico" />
