ReceiveHandler for getting messages to channels via main

--- a/src/ThePier.vcxproj
+++ b/src/ThePier.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="LoginController.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MainLoginInterface.h" />
+    <ClInclude Include="MainReceiveMessageInterface.h" />
     <ClInclude Include="Member.h" />
     <ClInclude Include="PierClient.h" />
     <ClInclude Include="PierListener.h" />
