--- a/src/ThePier.vcxproj.filters
+++ b/src/ThePier.vcxproj.filters
@@ -26,6 +26,8 @@
     <ClCompile Include="PierClient.cpp" />
     <ClCompile Include="PierListener.cpp" />
     <ClCompile Include="Protocol.cpp" />
+    <ClCompile Include="Uuid.cpp" />
+    <ClCompile Include="Nettest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThePierGUI.h">
@@ -44,6 +46,9 @@
     <ClInclude Include="PierListener.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="MainLoginInterface.h" />
+    <ClInclude Include="MainReceiveMessageInterface.h" />
+    <ClInclude Include="Uuid.h" />
+    <ClInclude Include="Nettest.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="boat.ico" />
